--- a/Dok/seminar.bib
+++ b/Dok/seminar.bib
@@ -6,6 +6,7 @@
   year =         "1973"
 }
 
+% Julius
 @MISC{fmSignalkunde,
   author = "Detlef Mietke",
   title = "Frequenzmodulation",
@@ -58,7 +59,56 @@ howpublished = "http://www.itwissen.info/definition/lexikon/Frequenzhub-frequenc
 year = "Aufgerufen am 31.05.2015"
 }
 
+% Bulli
+@misc{oya1987electronic,
+  title={Electronic musical instrument},
+  author={Oya, A.},
+  url={https://www.google.de/patents/US4643066},
+  year={1987},
+  month=feb # "~17",
+  publisher={Google Patents},
+  note={US Patent 4,643,066}
+}
 
+@misc{rossum1999method,
+  title={Method and apparatus for synthesizing musical sounds by frequency modulation using a filter},
+  author={Rossum, D.P.},
+  url={https://www.google.de/patents/US5900570},
+  year={1999},
+  month=may # "~4",
+  publisher={Google Patents},
+  note={US Patent 5,900,570}
+}
 
+@Book{lathi,
+	author = "B. P. Lathi",
+	title = "Modern Digital and Analog Communication Systems 3rd ed.",
+	year = "1998",
+	publisher = "Oxford University Press, Inc.",
+	number = "0-19-511009-9"
+}
 
+@Book{borucki,
+	author = "Hans Borucki",
+	title = "Einführung in die Akustik - 2., durchges. Aufl.",
+	year = "1980",
+	publisher = "Bibliographisches Institut Mannheim/Wien/Zürich",
+	number = "3-411-01581-0"
+}
 
+@Book{zwicker,
+	author = "Prof. Dr. Eberhard Zwicker, Prof. Dr. Richard Feldtkeller",
+	title = "Das Ohr als Nachrichtenempfänger - 2. Aufl.",
+	year = "1967",
+	publisher = "S. Hirzel Verlag Stuttgart",
+	number = "978-3777601045"
+}
+	
+@Book{raichel,
+	author = "Daniel R. Raichel",
+	title = "The Science and Applications of Acoustics Second Edititon",
+	year = "2006",
+	publisher = "Springer Science",
+	number = "0-387-26062-5"
+}
+	
