--- a/Dok/seminar.tex
+++ b/Dok/seminar.tex
@@ -11,9 +11,10 @@
 \usepackage{hyperref}
 \usepackage{gensymb}
 \usepackage[section]{placeins}
+\usepackage[export]{adjustbox}
 \usepackage{listings}
 \lstset{
-	 literate={ö}{{\"o}}1
+	 literate={ö}{{\"o}}1 	%Replaces "oe","ae" usw. with \o to use "Umlaute" in listings
            {ä}{{\"a}}1
            {ü}{{\"u}}1
 	{ß}{{\ss}}1
