--- a/Dok/seminar.bib
+++ b/Dok/seminar.bib
@@ -18,6 +18,7 @@ author = "Andrew J. Nelson",
 title =" The sound of innovation - Stanford and the computer music revolution",
 year = "2015",
 publisher = "MIT Press",
+series="Inside Technology",
 number = "978-0-262-02876-9"
 }
 
@@ -38,17 +39,17 @@ number = "978-0-262-02876-9"
 @Book{fmtheory,
 author = "John M. Chowning and David Bristow",
 title = "FM Theory \& Applications - By Musicians for Musicians",
-year = "1986",
 publisher = "Yamaha Music Foundation",
-number = "4-636-17482-8"
+number = "4-636-17482-8",
+year = "1986"
 }
 
 @Book{matheBuch,
 author = "Peter Stingl",
 title = "Mathematik für Fachhochschulen",
-year = "1981",
 publisher = "Carl Hanser Verlag München Wien",
-number = "3-446-13481-6"
+number = "3-446-13481-6",
+year = "1981"
 }
 
 @Misc{phasenhub,
